--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -206,6 +206,8 @@
 .mypage .progmg.allcare .my_ptcp_from .grade_wrap .tr_grade .input_txt {vertical-align: baseline;}
 .mypage .progmg.allcare .my_ptcp_from .grade_wrap .tr_major .box_table_group {display: flex; align-items: center;}
 .mypage .progmg.allcare .my_ptcp_from .grade_wrap .tr_major .box_table_group .btnSearch {margin-left: 8px;}
+.mypage .progmg.allcare .my_ptcp_from .grade_wrap .tr_major .cell_twin {flex-direction: row; gap: 8px;}
+.mypage .progmg.allcare .my_ptcp_from .grade_wrap .tr_major .cell_twin .new_ipt {max-width: 200px;}
 .mypage .progmg.allcare .my_ptcp_from .new_selectbox {position: relative; width: 200px; height: 40px; border: 1px solid #757575; border-radius: 4px;}
 .mypage .progmg.allcare .my_ptcp_from .new_selectbox select {padding: 6px 28px 6px 16px; width: 100%; height: 100%; appearance: none; -webkit-appearance: none; -moz-appearance: none;}
 .mypage .progmg.allcare .my_ptcp_from .new_selectbox::after {content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 14px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
@@ -275,7 +277,7 @@
 .allcare_popup.new_popup .newpop_major_search.newpop_inner .category_box .category_lv .category_tit h5 {color: #333;}
 .allcare_popup.new_popup .newpop_major_search.newpop_inner .category_box .category_lv .category-placeholder {height: 190px; padding-right: 6px; margin-right: 6px; overflow-y: auto;}
 .allcare_popup.new_popup .newpop_major_search.newpop_inner .category_box .category_lv .category-placeholder p {margin: 10px 16px; color: #757575;}
-.allcare_popup.new_popup .newpop_major_search.newpop_inner .category_box .category_lv ul li button {position: relative; text-align: left; width: 100%; height: 100%; padding: 8px 16px; color: #757575; font-weight: 400;}
+.allcare_popup.new_popup .newpop_major_search.newpop_inner .category_box .category_lv ul li button {position: relative; text-align: left; width: 100%; line-height: 20px; padding: 12px 16px; color: #757575; font-weight: 400;}
 .allcare_popup.new_popup .newpop_major_search.newpop_inner .category_box .category_lv li button[aria-selected="true"] {font-weight: 600; color: var(--col_blue);}
 .allcare_popup.new_popup .newpop_major_search.newpop_inner .category_box .category_lv li button[aria-selected="true"]::after {content: ''; position: absolute; left: 0; top: 0; width: 100%; height: 100%; border: 2px solid var(--col_blue);}
 .allcare_popup.new_popup .newpop_major_search.newpop_inner .category_box .category_lv .category-placeholder::-webkit-scrollbar {width: 6px;}
@@ -571,3 +573,5 @@
 .mypage .progmg.allcare .notlist_inner p {text-align: center; font-size: 16px; color: #333; font-weight: 600; line-height: 28px;}
 .mypage .progmg.allcare .roadmap_btn_wrap {display: flex; justify-content: flex-end;}
 
+/* 빌드업 - 경력개발로드맵_목록있음 */
+td.link_job a {color: var(--col_blue); text-decoration: underline; text-underline-offset: 2px;}
